--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1,16 +1,14 @@
-
-
-#card{
+.flipcard {
+    height: 199px;
     width: 300px;
-    height: 400px;
+    margin: 0 auto;
 }
-#card img{
+.flipcard img {
     width: 300px;
-    height: 400px;
-    cursor: pointer;
+    height: auto;
 }
-
-.front img{
-    position: absolute;
-
-}    
+.flipcard .back {
+    background: #2184cd;
+    color: #fff;
+    text-align: center;
+}
