--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .home{
-    background: url(./assets/backgrounds/h_img.jpg);
+    background: url(./backgrounds/h_img.jpg);
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -7,13 +7,13 @@
 }
 
 .services{
-    background: url(./assets/backgrounds/s_image.jpg);
+    background: url(./backgrounds/s_image.jpg);
     background-size: cover;
     
-}
+
 
 .contacts{
-    background: url(./assets/backgrounds/c_image.jpg);
+    background: url(./backgrounds/c_image.jpg);
     background-size: cover;
 }
 
