--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 #home{
-    background: url(../assets/backgrounds/h_img.jpg);
+    background: url(./assets/backgrounds/h_img.jpg);
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -7,7 +7,7 @@
 }
 
 #services{
-    background: url(../assets/backgrounds/s_image.jpg);
+    background: url(/assets/backgrounds/s_image.jpg);
     background-size: cover;
     
 }
